<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/ligthGray"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SignUpActivity">
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">-->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/bit"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/etUseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:hint="@string/username"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/colorPrimary"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtAlreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawablePadding="6dp"
            android:gravity="right"
            android:text="@string/already_have_account" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_up"
            app:cornerRadius="4dp" />

</LinearLayout>